--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         }
         @media only screen and (max-width: 1200px){
             #div1{
-                visibility: hidden;
+                display: none;
             }
         }
         
@@ -191,8 +191,8 @@
     </div>
 </section>
 
-<section class="py-5">
-    <div class="container bg-light">
+<section class="py-5 bg-light">
+    <div class="container ">
         <p class="text-success">- Our Vision </p>
         <div class="row align-items-center">
             <div class="col-md-6">
@@ -204,7 +204,7 @@
                     </div>
                   </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-5">
                 <div class="container1">
                 <div style="width: 150px;height: 80px;" class="text-center box border"> <span class="font-weight-bold text-success">8 </span><br> Professional agents</div>
                 <div style="width: 150px;height: 80px;" class="text-center box border"><span class="font-weight-bold text-success">12</span> <br> Insurance Type</div>
